// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectFile should render 1`] = `
<div>
  <div
    class="h-52 border-2 border-dashed rounded-lg mt-8 border-theme-secondary-300 dark:border-theme-secondary-800 p-2"
    data-testid="SelectFile"
  >
    <div
      class="h-full flex flex-col items-center justify-center rounded-lg transition-colors duration-200 bg-theme-primary-50 dark:bg-theme-secondary-800"
      data-testid="SelectFile__drop-zone"
    >
      <div
        class="mt-8 space-x-px"
      >
        <span
          class="font-semibold"
        >
          Drag & Drop or
           
        </span>
        <button
          class="relative font-semibold cursor-pointer link focus:outline-none group"
          data-testid="SelectFile__browse-files"
          title="Click here to upload"
          type="button"
        >
          <div
            class="absolute inset-0 -m-1 rounded ring-theme-primary-400 group-focus:ring-2 group-focus-visible"
          />
          Browse Files
        </button>
      </div>
      <div
        class="font-semibold text-theme-secondary-500 text-sm mt-2"
      >
        Supported format is 
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectFile should render with dwe file format 1`] = `
<div>
  <div
    class="h-52 border-2 border-dashed rounded-lg mt-8 border-theme-secondary-300 dark:border-theme-secondary-800 p-2"
    data-testid="SelectFile"
  >
    <div
      class="h-full flex flex-col items-center justify-center rounded-lg transition-colors duration-200 bg-theme-primary-50 dark:bg-theme-secondary-800"
      data-testid="SelectFile__drop-zone"
    >
      <div
        class="sc-bdfBwQ fTnhmh"
        height="40"
        width="40"
      >
        <svg>
          dwe-file.svg
        </svg>
      </div>
      <div
        class="mt-8 space-x-px"
      >
        <span
          class="font-semibold"
        >
          Drag & Drop or
           
        </span>
        <button
          class="relative font-semibold cursor-pointer link focus:outline-none group"
          data-testid="SelectFile__browse-files"
          title="Click here to upload"
          type="button"
        >
          <div
            class="absolute inset-0 -m-1 rounded ring-theme-primary-400 group-focus:ring-2 group-focus-visible"
          />
          Browse Files
        </button>
      </div>
      <div
        class="font-semibold text-theme-secondary-500 text-sm mt-2"
      >
        Supported format is .dwe
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectFile should render with json file format 1`] = `
<div>
  <div
    class="h-52 border-2 border-dashed rounded-lg mt-8 border-theme-secondary-300 dark:border-theme-secondary-800 p-2"
    data-testid="SelectFile"
  >
    <div
      class="h-full flex flex-col items-center justify-center rounded-lg transition-colors duration-200 bg-theme-primary-50 dark:bg-theme-secondary-800"
      data-testid="SelectFile__drop-zone"
    >
      <div
        class="sc-bdfBwQ fTnhmh"
        height="40"
        width="40"
      >
        <svg>
          json-file.svg
        </svg>
      </div>
      <div
        class="mt-8 space-x-px"
      >
        <span
          class="font-semibold"
        >
          Drag & Drop or
           
        </span>
        <button
          class="relative font-semibold cursor-pointer link focus:outline-none group"
          data-testid="SelectFile__browse-files"
          title="Click here to upload"
          type="button"
        >
          <div
            class="absolute inset-0 -m-1 rounded ring-theme-primary-400 group-focus:ring-2 group-focus-visible"
          />
          Browse Files
        </button>
      </div>
      <div
        class="font-semibold text-theme-secondary-500 text-sm mt-2"
      >
        Supported format is .json
      </div>
    </div>
  </div>
</div>
`;
